; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libmemstat/extr_memstat.c_memstat_get_percpu_numfrees.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libmemstat/extr_memstat.c_memstat_get_percpu_numfrees.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.memory_type = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @memstat_get_percpu_numfrees(%struct.memory_type* %0, i32 %1) #0 {
  %3 = alloca %struct.memory_type*, align 8
  %4 = alloca i32, align 4
  store %struct.memory_type* %0, %struct.memory_type** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.memory_type*, %struct.memory_type** %3, align 8
  %6 = getelementptr inbounds %struct.memory_type, %struct.memory_type* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i64 %9
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
